# rl-mesh-deformation

./: .gitignore  CLAUDE.md  README.md  bubble.sh  cheatsheet.txt  deform_polylines.py  deform_source_mesh_to_target_mesh.ipynb  generate_datasets.sh  notes.md  pixi.toml  pyproject.toml
configs/: classify.yaml  decenter.yaml  evaluate.yaml  evaluate_harness.yaml  export_dataset_pairs.yaml  export_deformation_stages.yaml  export_harness_comparison.yaml  generate.yaml  generate_r.yaml  train_matcher.yaml
configs/baseline/: chamfer_sgd.yaml  ema.yaml  none.yaml  prior.yaml
configs/dataset/: balanced_all_shapes.yaml  circle_only.yaml  grid_circle_only.yaml  grid_octagon_only.yaml  shapes_basic.yaml  (+2 more)
data_generation/: generate.py  test_generation.ipynb
design/: failures.md  graphnet.md  initial.md
experiment_scripts/: baselines.sh
notebooks/: evaluation.ipynb  poster_plots.ipynb
rlmd/: batching.py  dataset.py
scripts/: deform_polylines.py  evaluate_harness.py  export_dataset_pairs.py  export_deformation_stages.py  export_harness_comparison.py  generate.py  overfit_batch.py  smoke_classify.py  smoke_decenter.py  smoke_resample_graph.py  train_matcher.py  viz_resample.py
tests/: test_chamfer_metric_normals.py  test_grid_generation.py  test_learned_matcher.py  test_polygon_cnn.py  test_polygon_gnn.py  test_polyline_chamfer_distance.py  test_resample.py  test_resample_graph.py  test_sampling_normals.py  test_segment_std.py  test_self_intersection.py  test_self_losses_analytical.py  test_sgd_fixed_match.py
visualization/: tests.ipynb  visualize.py
(+100 files in other folders)
